syntax = "proto3";

package api.v1;

import "account/v1/v1.proto";

option go_package = "github.com/alecsavvy/mojave/gen/api/v1";

service Account {
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}

  // utility rpc to create transaction bytes for a wallet to sign and send
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
}

message GetAccountRequest {
  string address = 1;
}

message GetAccountResponse {
  account.v1.Account account = 1;
}

message CreateAccountRequest {
  account.v1.Account account = 1;
}

message CreateAccountResponse {
  bytes transaction = 1;
}
